# expedition-hq

./: .env.example  .gitignore  AGENTS.md  CODEX_PROJECT_PROMPT.md  README.md  SECURITY.md  START_HERE.md  package.json
.codex-memory/: MEMORY.md  README.md  SESSION-STATE.md  script-manifest.yml
apps/api/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/expedition_hq_api/: __init__.py  db.py  main.py  participation.py  proposals.py  season.py  xp.py
apps/api/tests/: test_seed_files.py
config/: agent-roster.seed.json  blockers.seed.json  dashboard.config.example.json  events.seed.json  expeditions.seed.json  hook-manifest.example.json  memory-stores.seed.json  milestones.seed.json  planned.seed.json  proposals.seed.json  rooms.seed.json  route-edges.seed.json  routes.seed.json  season-policy.seed.json  season-summaries.seed.json
docs/: AGENT_MATURITY_STATES.md  AGENT_XP_STATUS_PLAN.md  ASSET_INVENTORY.md  GAMIFICATION_RULES.md  INITIAL_EXPEDITION_MAP.md  NON_GOALS.md  PROJECT_CHARTER.md  PROJECT_THESIS_AUDIT.md  PROPOSAL_REPUTATION_METRICS.md  PROPOSAL_WAGER_SYSTEM.md  ROUTES_AND_RISKS.md  SEASON_0X_CALIBRATION.md  SUCCESS_CRITERIA.md
scripts/: Add-CodexMemoryEntry.ps1  Add-CorrectionEntry.ps1  Add-ErrorEntry.ps1  Add-LearningEntry.ps1  Add-ProactiveNextStep.ps1  Audit-ExpeditionHQSeasonReset.ps1  Get-MemoryStats.ps1  Initialize-CodexMemory.ps1  Invoke-ExpeditionHQSeasonRollover.ps1  Launch-ExpeditionHQWatcher.vbs  Register-ExpeditionHQSeasonReset.ps1  Register-ExpeditionHQStartup.ps1  Review-Memory.ps1  Start-ExpeditionHQ.ps1  bootstrap-local.sh  (+10 more)
(+39 files in other folders)
