[project]
name = "expedition-hq-api"
version = "0.1.0"
description = "Local-first read-only API for Expedition HQ"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["."]
